# dead-mans-switch

./: README.md  index.html  package-lock.json  package.json  server.js  test_backend.js  vercel.json  vite.config.js
contracts/: Cargo.toml  deadmans_wallet.masm  deadmans_wallet.masp  store.sqlite3
contracts/deadmans-wallet/: Cargo.toml
contracts/deadmans-wallet/.cargo/: config.toml
contracts/deadmans-wallet/src/: lib.rs
contracts/integration/: Cargo.toml  deadmans_wallet.masm  store.sqlite3
contracts/integration/keystore/: 7000988478797843511
contracts/integration/src/: lib.rs
contracts/templates/: basic-auth.mct  basic-fungible-faucet.mct
data/: database.sqlite
src/: config.js  main.js  miden.js  router.js  store.js
src/components/: countdown.js  modal.js  sidebar.js  toast.js
src/pages/: activity.js  claim.js  dashboard.js  login.js  setup.js
src/styles/: index.css
