[package]
name = "deadmans-integration"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "deploy"
path = "src/bin/deploy.rs"

[[bin]]
name = "check-in"
path = "src/bin/check_in.rs"

[dependencies]
miden-client = { version = "0.13", features = ["tonic"] }
miden-protocol = { workspace = true }
miden-standards = { workspace = true }
miden-tx = { workspace = true }
miden-client-sqlite-store = { workspace = true }
rand = "0.10.0"
tokio = { version = "1", features = ["full"] }
